MODIFIED : button component

--- a/.xolonotes/components/button/button.css
+++ b/.xolonotes/components/button/button.css
@@ -1,192 +1,77 @@
-:root {
-    --clr-bg: #efefef;
-    --clr-primary: #0f172a;
-    --easing: cubic-bezier(0.47, 1.64, 0.41, 0.8);
-}
-
-/* reset button */
-input,
-button {
-    appearance: none;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    outline: none;
-    padding: 0;
-    margin: 0;
-    font-family: inherit;
-    font-size: inherit;
-    color: inherit;
-    text-decoration: none;
-    text-transform: none;
-    line-height: normal;
-    overflow: visible;
-}
-
-.buttons {
-    max-width: 500px;
-    width: 100%;
-    border-radius: 20px;
-    background-color: #00000050;
-    border: 1px solid #ffffff30;
-    padding: 2rem;
-    backdrop-filter: blur(12px);
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
+.button-group{
+    display: flex;
     justify-content: center;
-    gap: 1.5rem;
+}
+
+button {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #3d405b;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 17px;
+    padding: 16px;
+    width: 130px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+}
+   
+button span {
+    cursor: pointer;
+    display: inline-block;
     position: relative;
+    transition: 0.5s;
 }
 
-.buttons::before {
-    content: '';
+button span:after {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    content: '»';
     position: absolute;
-    inset: 0;
-    background-color: #00000020;
-    z-index: -1;
-    border-radius: inherit;
-    transition: inset 500ms ease-in-out;
+    opacity: 0;
+    top: -3px;
+    right: -15px;
+    transition: 0.5s;
 }
 
-.buttons:hover::before {
-    inset: -2rem;
-    transition-timing-function: cubic-bezier(0.47,
-            1.64,
-            0.41,
-            0.8);
+button:hover span {
+    padding-right: 15px;
 }
 
-.buttons button {
-    background-color: #00000050;
-    border: 1px solid #ffffff30;
-    padding: 1rem;
+button:hover span:after {
+    opacity: 1;
+    right: 0;
+}
+
+button::after {
+    content: "";
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    aspect-ratio: 1/1;
-    border-radius: 5px;
-    outline: none;
-    overflow: hidden;
-    cursor: pointer;
-    transition: 300ms ease-in-out;
-    position: relative;
-    isolation: isolate;
-    color: #ffffff90;
+    background: radial-gradient(
+        circle,
+        rgba(255, 255, 255, 0.25) 0%,
+        rgba(255, 255, 255, 0) 70%
+    );
+    transform: scale(0);
+    transition: transform 0.5s ease;
 }
 
-.buttons button svg {
-    width: 1.8rem;
+button:hover::after {
+    transform: scale(4);
+}
+  
+button:hover {
+    border-color: #292929;
+
+    background: rgba(0,0,0,0);
 }
 
-.buttons button p {
-    position: absolute;
-    width: 100%;
-    font-size: 0.8rem;
-    opacity: 0;
-    left: 0;
-    bottom: 0.5rem;
-    padding: 0.3rem;
-    text-align: center;
-    transition: all 150ms ease-in-out 0ms;
-    outline: none;
-    translate: 0 10px;
-}
-
-.buttons button:hover p {
-    opacity: 1;
-    translate: 0;
-    transition: all 300ms ease-in-out 150ms;
-}
-
-.buttons button:focus-visible,
-.buttons button:hover {
-    transform: scale(1.15);
-    z-index: 10;
-    color: #fff;
-    background-color: rgba(var(--bg), 0.5);
-}
-
-.buttons:has(button:focus-visible) button:not(:focus-visible),
-.buttons:has(button:hover) button:not(:hover) {
-    opacity: 50%;
-    scale: 85%;
-    z-index: -10;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-    :root {
-        --d: 0;
-        --ani-speed: 300ms;
-    }
-
-    [slide-in-left] {
-        opacity: 0;
-        translate: -500px 0;
-        animation: slide-in var(--ani-speed) ease-out forwards;
-        animation-delay: calc(var(--order, 0ms) * var(--ani-speed));
-    }
-
-    [slide-in-right] {
-        opacity: 0;
-        translate: 500px 0;
-        animation: slide-in var(--ani-speed) ease-out forwards;
-        animation-delay: calc(var(--order, 0ms) * var(--ani-speed));
-    }
-
-    [slide-in-top] {
-        opacity: 0;
-        translate: 0 -500px;
-        animation: slide-in var(--ani-speed) ease-out forwards;
-        animation-delay: calc(var(--order, 0ms) * var(--ani-speed));
-    }
-
-    [slide-in-bottom] {
-        opacity: 0;
-        translate: 0 500px;
-        animation: slide-in var(--ani-speed) ease-out forwards;
-        animation-delay: calc(var(--order, 0ms) * var(--ani-speed));
-    }
-
-    [scale-up] {
-        scale: 0;
-        animation: scale-up var(--ani-speed) forwards;
-        animation-delay: calc(var(--order, 0ms) * var(--ani-speed));
-    }
-
-    [scale-from-top] {
-        transform-origin: top;
-        scale: 1 0;
-        animation: scale-up var(--ani-speed) forwards;
-        animation-delay: calc(var(--order, 0ms) * var(--ani-speed));
-    }
-
-
-}
-
-@keyframes slide-in {
-    from {
-        opacity: 0;
-    }
-
-    50% {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-        translate: 0;
-    }
-}
-
-@keyframes scale-up {
-    0% {
-        scale: 0;
-    }
-
-    60% {
-        scale: 1.15;
-    }
-
-    100% {
-        scale: 1;
-    }
+button:hover svg path{
+    fill: black !important;
+    color: #292929;
 }
