--- a/.xolonotes/common.css
+++ b/.xolonotes/common.css
@@ -25,7 +25,7 @@ body {
 
 
 .container {
-    background-color: rgb(148, 101, 101);
+    /* background-color: rgb(148, 101, 101); */
     width: 100%;
     max-width: 75%;
 }
