--- a/.xolonotes/common.css
+++ b/.xolonotes/common.css
@@ -30,6 +30,10 @@ body {
     max-width: 75%;
 }
 
+.hidden {
+    display: none;
+    visibility: hidden;
+}
 
 @media screen and (max-width: 672px)
 {
