--- a/.xolonotes/common.css
+++ b/.xolonotes/common.css
@@ -35,6 +35,21 @@ body {
     visibility: hidden;
 }
 
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.fade-in {
+    animation: fadeIn 0.5s ease-in-out;
+}
+
+
 @media screen and (max-width: 672px)
 {
 
