--- a/.xolonotes/common.css
+++ b/.xolonotes/common.css
@@ -16,13 +16,16 @@ body {
     padding: 0;
     box-sizing: border-box;
 
-    height: 1000px;
+    height: 100vh;
     width: 100%;
-    background-image: url('./images/background-desktop.png');
-    background-repeat: no-repeat;
-    background-position-x: center;
 }
 
+.gradient-text {
+    background-image: linear-gradient(45deg, #7E7373, #D2BDBD);
+    background-size: 100%;  
+    background-clip: text;
+    color: transparent;
+}
 
 .container {
     /* background-color: rgb(148, 101, 101); */
@@ -30,9 +33,21 @@ body {
     max-width: 75%;
 }
 
+.container-wrapper{
+    width: 100%;
+}
+
 .hidden {
     display: none;
     visibility: hidden;
+}
+
+#background{
+    height: 100%;
+    width: auto;
+    position: fixed;
+    z-index: -1;
+    top: 0;
 }
 
 @media screen and (max-width: 672px)
