--- a/temporary.css
+++ b/temporary.css
@@ -12,26 +12,28 @@
 
 .header-container{
   margin-bottom: 27px;
+  /* background-color: #bdbdbd44; */
 }
 
-.header-container:hover, .content-container p:hover, .date-container p:hover{
+.header-container:hover, .content-container textarea:hover, .content-container p:hover, .date-container p:hover{
   cursor: pointer;
-  color: rgb(88, 88, 88); /* Change to your desired color */
+  /* color: rgb(88, 88, 88); Change to your desired color */
   text-decoration: underline; /* Optional: Add an underline effect */
 }
 
-.content-container textarea{
+.content-container textarea, .content-container p{
   width: 100%;
   height: 633px;
+  /* background-color: #bdbdbd44; */
 }
 
 .content-container{
   border-top: 1px solid #000000; /* Set border style, width, and color */
   border-bottom: 1px solid #000000; /* Set border style, width, and color */
-  /* padding: 37px 0; */
-  max-height: 633px;
-  /* overflow-y: scroll; */
-  background-color: #f5f5f5; /* Add a background color */
+  padding: 37px 0;
+  height: 633px;
+  overflow-y: scroll;
+  /* background-color: #bdbdbd44; Add a background color */
 }
 
 .date-container{
