MODIFIED : text will update upon closing of the modal

--- a/.xolonotes/components/card/card.css
+++ b/.xolonotes/components/card/card.css
@@ -44,10 +44,12 @@
 .notes-container-wrapper {
     display: grid;
     width: inherit;
-    grid-template-columns: repeat(3, 1fr);  /* Three columns of equal width */
-    grid-template-rows: 200px auto;         /* First row 200px tall, second row auto-sized */
+    grid-template-columns: repeat(auto-fit, minmax(263px, 176.24px));  /* Three columns of equal width */
+    grid-gap: 30px;
     column-gap: 30px;
-    max-width: 1200px;
+    justify-content: center;
+    height: 100vh;
+    padding: 0 50px;
 }
 
 .input-box {
