--- a/.xolonotes/utility.css
+++ b/.xolonotes/utility.css
@@ -27,3 +27,15 @@
 .spacing-top-most{
     margin-top: 90px;
 }
+
+.no-scrolling{
+    overflow: hidden;
+}
+
+.enable-scroll{
+    overflow: scroll;
+}
+
+.screen-size{
+    height: 150vh;
+}
