--- a/.xolonotes/templates/journal/journal.css
+++ b/.xolonotes/templates/journal/journal.css
@@ -6,7 +6,7 @@
 /* components */
 @import "/.xolonotes/components/card/card.css";
 @import "/.xolonotes/components/header/header.css";
-/* @import "/.xolonotes/components/button/button.css"; */
+@import "/.xolonotes/components/button/button.css";
 @import "/.xolonotes/components/modal/modal.css";
 
 body {
