fix : adjust modal size for mobile

--- a/.xolonotes/components/modal/modal.css
+++ b/.xolonotes/components/modal/modal.css
@@ -71,3 +71,10 @@ button {
     border: 2px solid burlywood;
     border-radius: 5px;
 }
+
+
+@media screen and (min-width: 768px) {
+    .modal-container{
+        margin-top: 20px;
+    }
+}
