fixed : responsiveness issue

--- a/.xolonotes/components/modal/modal.css
+++ b/.xolonotes/components/modal/modal.css
@@ -73,8 +73,8 @@ button {
 }
 
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
     .modal-container{
-        margin-top: 20px;
+        margin-top: 20px ;
     }
 }
