--- a/.xolonotes/templates/journal/journal.css
+++ b/.xolonotes/templates/journal/journal.css
@@ -37,6 +37,12 @@ card{
     align-items: space-between;
 }
 
+card:active{
+    transform: scale(0.9) rotate(3deg);
+    background: radial-gradient(circle farthest-corner at 10% 20%, rgba(255, 94, 247, 1) 17.8%, rgba(2, 245, 255, 1) 100.2%);
+    transition: 0.5s;
+}
+
 .notes-container-wrapper button{
     background-color: rgba(0,0,0,0);
     border: none;
