--- a/.xolonotes/components/button/button.css
+++ b/.xolonotes/components/button/button.css
@@ -41,3 +41,10 @@
         padding-left: 8%;
     }
 }
+
+
+@media screen and (max-width: 670px){
+    .button-group-container{
+        max-width: 80%;
+    }
+}
