--- a/.xolonotes/components/card/card.css
+++ b/.xolonotes/components/card/card.css
@@ -82,8 +82,8 @@ card {
     align-items: space-between;
 }
 
-card:active , card:hover {
-    transform: scale(0.9) rotate(3deg);
+card:active {
+    transform: scale(0.95) rotate(3deg);
     background: radial-gradient(circle farthest-corner at 10% 20%, rgba(255, 94, 247, 1) 17.8%, rgba(2, 245, 255, 1) 100.2%);
     transition: 0.5s;
 }
