--- a/.xolonotes/components/button/button.css
+++ b/.xolonotes/components/button/button.css
@@ -11,28 +11,32 @@
     border-radius: 50px;
     cursor: pointer;
     border: 0;
-    background-color: white;
-    box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
+    background-color: rgba(255, 255, 255, 0.521);
+    box-shadow: rgba(0, 0, 0, 0.288) 0 0 8px;
     letter-spacing: 1.5px;
     text-transform: uppercase;
     font-size: 15px;
     transition: all 0.5s ease;
 }
 
-.button-group .btn:hover {
+.button-group .btn:not(.static):hover {
     letter-spacing: 3px;
     background-color: hsl(261deg 80% 48%);
     color: hsl(0, 0%, 100%);
     box-shadow: rgb(93 24 220) 0px 7px 29px 0px;
 }
 
-.button-group .btn:active {
+.button-group .btn:not(.static):active {
     letter-spacing: 3px;
     background-color: hsl(261deg 80% 48%);
     color: hsl(0, 0%, 100%);
     box-shadow: rgb(93 24 220) 0px 0px 0px 0px;
     transform: translateY(10px);
     transition: 100ms;
+}
+
+.static{
+    background-color: rgba(128, 128, 128, 0.178) !important;
 }
 
 @media screen and (max-width: 1216px) {
