--- a/.xolonotes/templates/main/main.css
+++ b/.xolonotes/templates/main/main.css
@@ -1,3 +1,13 @@
+/* global */
+@import "/.xolonotes/utility.css";
+@import "/.xolonotes/common.css";
+@import "/.xolonotes/fonts.css";
+
+/* components */
+@import "/.xolonotes/components/card/card.css";
+@import "/.xolonotes/components/header/header.css";
+@import "/.xolonotes/components/button/button.css";
+
 body {
     width: 100%;
     height: 100vh;
