--- a/.xolonotes/components/card/card.css
+++ b/.xolonotes/components/card/card.css
@@ -55,7 +55,7 @@
 
 
 card {
-    background-color: bisque;
+    background-color: rgb(255 255 255);
     padding: 0 15px;
     padding-top: 15px;
     min-height: 243.328px;
@@ -67,7 +67,7 @@ card {
 
 card:active {
     transform: scale(0.95) rotate(3deg);
-    background: radial-gradient(circle farthest-corner at 10% 20%, rgba(255, 94, 247, 1) 17.8%, rgba(2, 245, 255, 1) 100.2%);
+    background: radial-gradient(circle farthest-corner at 10% 20%, rgb(197, 188, 195) 17.8%, rgb(195, 183, 199) 100.2%);
     transition: 0.5s;
 }
 
@@ -76,10 +76,6 @@ card:active {
     border: none;
 }
 
-.notes-container-wrapper card {
-    /* margin-bottom: 15px; */
-    background-color: bisque;
-}
 
 .entry-body {
     height: 90%;
