--- a/.xolonotes/components/card/card.css
+++ b/.xolonotes/components/card/card.css
@@ -56,6 +56,7 @@
 
 card {
     background-color: rgb(255 255 255);
+    box-shadow: rgba(0, 0, 0, 0.288) 0 0 8px;
     padding: 0 15px;
     padding-top: 15px;
     min-height: 243.328px;
