--- a/temporary.css
+++ b/temporary.css
@@ -95,10 +95,59 @@
 }
 
 
+/*
+ *  FOOTER
+ */
+
+
 .footer{
     width: 100%;
-    height: 100px;
-    background-color: antiquewhite;
+    /* height: 100px; */
+    background-color: rgb(34 34 34 / 93%);
     bottom: 0;
     position: fixed;
+    color: white;
+}
+
+.footer .copyright{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 30px;
+    /* padding-top: 25px; */
+}
+
+sub-main input{
+    height: 3rem;
+    width: 100%;
+    text-align: center;
+    margin-top: 15px;
+    background-color: rgb(189 189 189 / 92%);;
+}
+
+.form{
+    background: rgb(193 193 193 / 60%);
+    height: 23vh;
+    width: 85vw;
+    border-radius: 2rem;
+    margin: 15px;
+    max-width: 450px;
+}
+
+.form .button-group{
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.btn{
+    padding: 1vw 2vw;
+    min-width: 106px;
+}
+
+
+@media screen and (max-width: 460px) {
+    .footer .copyright{
+        display: block;
+        padding: 10px;
+    }
 }
